--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     list-style: none;
     text-decoration: none;
     box-sizing: border-box;
+    
 }
 /*Key Color dùng để gán giá trị nhanh, dễ thay đổi màu sắc 
 mà không cần phải viết lại mã màu nhiều lần*/
@@ -262,6 +263,146 @@ header{
     text-align: center;
     font-size: 14px;
 }
+
+/**men prodyuct**/
+
+.menproduct-container{
+    display: grid;
+    grid-template-columns: 350px 350px 350px;
+    gap: 2em;/*Gap dung đe xac dinh khoang cach giua cac phan tu dung de thiet lap respon*/
+    margin-top: 2rem;
+   
+}
+
+.menproduct-container .box{
+    /*flex:1 1 17rem;
+    position: relative;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    background: #ffff;
+    border-radius: 0.5rem;*/
+    flex:1 1 17rem;
+    display: flex;
+    position: relative;
+    flex-direction:column;
+    background: #ffff;
+    padding: 40px;
+    border-radius: 1.5rem;
+    overflow: hidden;
+    
+    
+}
+
+.menproduct-container .box img{
+    /*width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+    margin-bottom: 1rem;*/
+    width: 100%;
+    height: 250px;
+    object-fit: contain;
+    margin-bottom: 1rem;
+    object-position: center;
+  
+    
+}
+.menproduct-container .box img:hover{
+    transform: scale(1.1);/*scale dùng để thay đổi hình dạng vị trí của phần tử*/
+    transition:0.5s;
+}
+.menproduct-container .box h2{
+    font-size: 1.3rem;
+    font-weight: 600;
+    
+}
+
+
+.menproduct-container .box span{
+    font-size: 1.4rem;
+    font-weight: 600;
+    color:var(--main-color)
+}
+.menproduct-container .box p{
+    font-size: 1.2rem;
+    margin: 0.5rem 0 1.5rem;
+}
+.menproduct-container .box .btn{
+    max-width: 100px;
+    text-align: center;
+    font-size: 14px;
+}
+
+/**Women Product**/
+.womenproduct-container{
+    display: grid;
+    grid-template-columns: 350px 350px 350px;
+    gap: 2em;/*Gap dung đe xac dinh khoang cach giua cac phan tu dung de thiet lap respon*/
+    margin-top: 2rem;
+   
+}
+
+.womenproduct-container .box{
+    /*flex:1 1 17rem;
+    position: relative;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    background: #ffff;
+    border-radius: 0.5rem;*/
+    flex:1 1 17rem;
+    display: flex;
+    position: relative;
+    flex-direction:column;
+    background: #ffff;
+    padding: 40px;
+    border-radius: 1.5rem;
+    overflow: hidden;
+    
+    
+}
+
+.womenproduct-container .box img{
+    /*width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+    margin-bottom: 1rem;*/
+    width: 100%;
+    height: 250px;
+    object-fit: contain;
+    margin-bottom: 1rem;
+    object-position: center;
+  
+    
+}
+.womenproduct-container .box img:hover{
+    transform: scale(1.1);/*scale dùng để thay đổi hình dạng vị trí của phần tử*/
+    transition:0.5s;
+}
+.womenproduct-container .box h2{
+    font-size: 1.3rem;
+    font-weight: 600;
+    
+}
+
+
+.womenproduct-container .box span{
+    font-size: 1.4rem;
+    font-weight: 600;
+    color:var(--main-color)
+}
+.womenproduct-container .box p{
+    font-size: 1.2rem;
+    margin: 0.5rem 0 1.5rem;
+}
+.womenproduct-container .box .btn{
+    max-width: 100px;
+    text-align: center;
+    font-size: 14px;
+}
+
 .about{
     display: flex;
     flex-wrap: wrap;
@@ -333,6 +474,9 @@ header{
     font-weight: 600;
     color:var(--main-color)
 }
+
+/*Men Product**/
+
 
 /*Thết lập phần phụ kiện*/
 .accessory-container{
@@ -525,7 +669,7 @@ header{
     list-style: none;
 }
 .listPageShoe{
-     display: flex;
+    display: flex;
     justify-content: center;
     list-style: none;
     padding: 0;
@@ -551,12 +695,76 @@ header{
     
 }
 
+.listPageShoeMen{
+    padding: 15px;
+    text-align: center;
+    list-style: none;
+}
+.listPageShoeMen{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin-top: 20px;
+    
+    
+}
+.listPageShoeMen li{
+    color:#111111BD;
+    background-color:#D3D3D3;
+    display: inline-block;
+    margin:  0 10px;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+    
+}
+
+.listPageShoeMen .active{
+    background-color: #ffa500;
+    color: #111111;
+    
+}
+
+/**Women prodcut css*/
+.listPageShoeWomen{
+    padding: 15px;
+    text-align: center;
+    list-style: none;
+}
+.listPageShoeWomen{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin-top: 20px;
+    
+    
+}
+.listPageShoeWomen li{
+    color:#111111BD;
+    background-color:#D3D3D3;
+    display: inline-block;
+    margin:  0 10px;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+    
+}
+
+.listPageShoeWomen .active{
+    background-color: #ffa500;
+    color: #111111;
+    
+}
+
+
 
 /** test css*/
 ul ul {
     display: none;
     position:absolute;
-    background-color:#D3D3D3;
+    background-color:#818181;
     color:#111111;
 }
 
@@ -568,5 +776,9 @@ ul li{
     font-size: 20px;
 
 }
+
+
+
+
 
 
